grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._definitions)
    ),

    _definitions: $ => seq(
      repeat(';;'),
      choice($._module_item, $.toplevel_directive, seq($._seq_expression, repeat($.item_attribute))),
      repeat(choice(
        seq(repeat(';;'), choice($._module_item, $.toplevel_directive)),
        seq(repeat1(';;'), seq($._seq_expression, repeat($.item_attribute)))
      )),
      repeat(';;')
    ),

    // Toplevel

    toplevel_directive: $ => seq(
      $.directive,
      optional(choice(
        $._constant,
        $.value_path,
        $._module_expression
      ))
    ),

    // Module items

    value_specification: $ => seq(
      'val',
      optional($._extension_attribute),
      $.value_name,
      ':',
      $._type,
      repeat($.item_attribute)
    ),

    value_definition: $ => seq(
      choice(
        seq('let', optional($._extension_attribute), optional('rec')),
        $.let_operator
      ),
      sep1(
        choice(
          seq('and', repeat($.attribute)),
          $.and_operator
        ),
        $.let_binding
      )
    ),

    let_binding: $ => seq(
      $._pattern,
      repeat($.parameter),
      optional(seq(':', $._poly_type)),
      optional(seq(':>', $._type)),
      '=',
      $._seq_expression,
      repeat($.item_attribute)
    ),

    parameter: $ => choice(
      $._simple_pattern,
      $.label,
      seq(
        $.label,
        token.immediate(':'),
        $._simple_pattern
      ),
      seq(
        choice('~', '?'),
        '(',
        $._label_name,
        optional(seq(':', $._type)),
        optional(seq('=', $._seq_expression)),
        ')'
      ),
      seq(
        $.label,
        token.immediate(':'),
        '(',
        $._pattern,
        optional(seq(':', $._type)),
        seq('=', $._seq_expression),
        ')'
      ),
      parenthesize($.abstract_type)
    ),

    external: $ => seq(
      'external',
      optional($._extension_attribute),
      $.value_name,
      ':',
      $._type,
      '=',
      repeat1($.string),
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type', optional($._extension_attribute), optional('nonrec'),
      sep1(seq('and', repeat($.attribute)), $.type_binding)
    ),

    type_binding: $ => seq(
      optional($.type_params),
      choice(
        seq(
          $._type_constructor,
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            choice(
              $.variant_declaration,
              $.record_declaration,
              '..'
            )
          )),
          repeat($.type_constraint)
        ),
        seq(
          $.type_constructor_path,
          seq(
            '+=',
            optional('private'),
            $.variant_declaration,
          )
        )
      ),
      repeat($.item_attribute)
    ),

    type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', $._type_param))
    ),

    _type_param: $ => seq(
      optional(choice('+', '-')),
      choice(
        $.type_variable,
        alias('_', $.type_variable)
      )
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      $._type
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        seq('[', ']'),
        parenthesize('::')
      ),
      optional(choice(
        seq('of', $.constructor_argument),
        seq(':', $._simple_type),
        seq(':', $.constructor_argument, '->', $._simple_type),
        seq('=', $.constructor_path)
      )),
      repeat($.attribute)
    ),

    constructor_argument: $ => choice(
      sep1('*', $._simple_type),
      $.record_declaration
    ),

    record_declaration: $ => seq(
      '{',
      sep1(seq(';', repeat($.attribute)), $.field_declaration),
      optional(seq(';', repeat($.attribute))),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      ':',
      $._poly_type,
    ),

    type_constraint: $ => seq(
      'constraint',
      $._type,
      '=',
      $._type
    ),

    exception_definition: $ => seq(
      'exception',
      $.constructor_declaration,
      repeat($.item_attribute)
    ),

    module_definition: $ => seq(
      'module', optional($._extension_attribute), optional('rec'),
      sep1(seq('and', repeat($.attribute)), $.module_binding)
    ),

    module_binding: $ => seq(
      $._module_name,
      repeat($.module_parameter),
      optional(seq(':', $._module_type)),
      optional(seq('=', $._module_expression)),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      choice($._module_name, alias('_', $._module_name)),
      ':',
      $._module_type
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._extension_attribute),
      $._module_type_name,
      optional(seq('=', $._module_type)),
      repeat($.item_attribute)
    ),

    open_statement: $ => seq(
      'open',
      optional('!'),
      optional($._extension_attribute),
      $._module_expression,
      repeat($.item_attribute)
    ),

    include_statement: $ => seq(
      'include',
      optional($._extension_attribute),
      choice($._module_type, $._module_expression),
      repeat($.item_attribute)
    ),

    _module_type: $ => prec.right(seq(
      choice(
        $.module_type_path,
        $.signature,
        $.module_type_constraint,
        $.module_type_of,
        $.functor_type,
        $.parenthesized_module_type,
        $.extension
      ),
      repeat($.attribute)
    )),

    signature: $ => seq(
      'sig',
      repeat($.attribute),
      optional($._definitions),
      'end'
    ),

    module_type_constraint: $ => prec.right(seq(
      $._module_type,
      'with',
      sep1('and', choice(
        seq(
          'type',
          optional($.type_params),
          $.type_constructor_path,
          $._type_equation,
          repeat($.type_constraint)
        ),
        seq(
          'module',
          $._module_expression,
          choice('=', ':='),
          $._module_expression
        )
      ))
    )),

    module_type_of: $ => seq(
      'module', 'type', 'of',
      repeat($.attribute),
      $._module_expression
    ),

    functor_type: $ => prec.right(seq(
      choice(
        seq(
          'functor',
          repeat($.attribute),
          repeat($.module_parameter)
        ),
        $._module_type
      ),
      '->',
      $._module_type
    )),

    parenthesized_module_type: $ => parenthesize($._module_type),

    // Module expressions

    _module_expression: $ => prec.dynamic(1, prec.right(seq(
      choice(
        $._module_name,
        $.structure,
        $.functor,
        $.module_application,
        $.submodule,
        $.typed_module_expression,
        $.packed_module,
        $.parenthesized_module_expression,
        $.extension
      ),
      repeat($.attribute)
    ))),

    module_application: $ => prec(2, seq(
      $._module_expression,
      parenthesize(optional($._module_expression))
    )),

    submodule: $ => prec.left(1, seq(
      $._module_expression, '.', $._module_expression
    )),

    _poly_type: $ => seq(
      optional(seq($.polymorphic_types, '.')),
      $._type
    ),

    abstract_type: $ => seq('type', repeat1($._type_constructor)),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.extension
    ),

    _type: $ => prec.right(seq(
      choice(
        $._simple_or_tuple_type,
        $.function_type,
        $.aliased_type
      ),
      repeat($.attribute)
    )),

    function_type: $ => prec.right(PREC.seq, seq(
      choice($._typed_label, $._type),
      '->',
      $._type
    )),

    _typed_label: $ => prec.left(PREC.seq, seq(
      optional('?'),
      $._label_name,
      ':',
      $._type
    )),

    tuple_type: $ => prec(PREC.prod, seq(
      choice(
        $._simple_type,
        $.tuple_type
      ),
      '*',
      $._simple_type
    )),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type,
        parenthesize(sep1(',', $._type))
      ),
      $.type_constructor_path
    )),

    aliased_type: $ => prec(PREC.match, seq(
      $._type,
      'as',
      $.type_variable
    )),

    polymorphic_variant_type: $ => choice(
      seq('[', optional('|'), sep1('|', $._tag_spec), ']'),
      seq('[>', optional('|'), sep('|', $._tag_spec), ']'),
      seq('[<', optional('|'), sep1('|', $._tag_spec), optional(seq('>', repeat1($.tag))), ']'),
    ),

    _tag_spec: $ => choice(
      $._simple_type,
      $.tag_specification
    ),

    tag_specification: $ => seq(
      $.tag,
      optional(seq(
        'of',
        optional('&'),
        sep1('&', $._type)
      )),
      repeat($.attribute)
    ),

    package_type: $ => parenthesize(seq(
      'module',
      optional($._extension_attribute),
      $._module_type
    )),

    parenthesized_type: $ => parenthesize($._type),

    // Expressions

    _expression: $ => prec.right(seq(
      choice(
        $._simple_expression,
        $.product_expression,
        $.cons_expression,
        $.application_expression,
        $.infix_expression,
        alias($._sign_expression, $.prefix_expression),
        $.set_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.function_expression,
        $.fun_expression,
        $.try_expression,
        $.let_expression,
        $.assert_expression,
        $.lazy_expression,
        $.let_module_expression,
        $.let_open_expression,
        $.let_exception_expression,
        $.object_expression
      ),
      repeat($.attribute)
    )),

    _seq_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    product_expression: $ => prec.left(PREC.prod, seq(
      $._expression,
      ',',
      $._expression
    )),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case)
    )),

    match_case: $ => seq(
      $._pattern_or_exception,
      optional(seq('when', $._seq_expression)),
      '->',
      choice($._seq_expression, $.refutation_case)
    ),

    function_expression: $ => prec.right(PREC.match, seq(
      'function',
      optional($._extension_attribute),
      $._match_cases
    )),

    _simple_pattern: $ => choice(
      $.value_name,
      $._signed_constant,
      $.typed_pattern,
      $.constructor_path,
      $.tag,
      $.polymorphic_pattern,
      $.record_pattern,
      $.list_pattern,
      $.array_pattern,
      $.local_open_pattern,
      $.package_pattern,
      $.parenthesized_pattern,
      $.extension
    ),

    _pattern_or_exception: $ => choice(
      $._pattern,
      seq($.exception_pattern, repeat($.attribute))
    ),

    _pattern: $ => prec.right(seq(
      choice(
        $._simple_pattern,
        $.alias_pattern,
        $.or_pattern,
        $.constructor_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.cons_pattern,
        $.range_pattern,
        $.lazy_pattern
      ),
      repeat($.attribute)
    )),

    alias_pattern: $ => prec.left(PREC.match, seq(
      $._pattern,
      'as',
      $.value_name
    )),

    typed_pattern: $ => parenthesize(seq(
      $._pattern,
      ':',
      $._type
    )),

    or_pattern: $ => prec.left(PREC.seq, seq(
      $._pattern,
      '|',
      $._pattern
    )),

    constructor_pattern: $ => prec.right(PREC.app, seq(
      $.constructor_path,
      $._pattern
    )),

    tag_pattern: $ => prec.right(PREC.app, seq(
      $.tag,
      $._pattern
    )),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._pattern,
      ',',
      $._pattern
    )),

    record_pattern: $ => seq(
      '{',
      sep1(';', $.field_pattern),
      optional(seq(';', '_')),
      optional(';'),
      '}'
    ),

    field_pattern: $ => seq(
      $.field_path,
      optional(seq(':', $._type)),
      optional(seq('=', $._pattern))
    ),

    list_pattern: $ => seq(
      '[',
      optional(seq(
        sep1(';', $._pattern),
        optional(';')
      )),
      ']'
    ),

    cons_pattern: $ => prec.right(PREC.cons, seq(
      $._pattern,
      '::',
      $._pattern
    )),

    array_pattern: $ => seq(
      '[|',
      optional(seq(
        sep1(';', $._pattern),
        optional(';')
      )),
      '|]'
    ),

    range_pattern: $ => prec(PREC.dot, seq(
      $._signed_constant,
      '..',
      $._signed_constant
    )),

    lazy_pattern: $ => prec(PREC.hash, seq(
      'lazy',
      optional($._extension_attribute),
      $._pattern
    )),

    local_open_pattern: $ => seq(
      $._module_name,
      '.',
      choice(
        parenthesize($._pattern),
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.local_open_pattern
      )
    ),

    package_pattern: $ => parenthesize(seq(
      'module',
      optional($._extension_attribute),
      $._module_name,
      optional(seq(':', $._module_type))
    )),

    parenthesized_pattern: $ => parenthesize($._pattern),

    _extension_attribute: $ => prec.right(choice(
      seq('%', $.attribute_id),
      $.attribute,
      seq($._extension_attribute, repeat1($.attribute))
    )),

    // Constants

    _signed_constant: $ => choice(
      $._constant,
      alias($._signed_number, $.number)
    ),

    _constant: $ => choice(
      $.number,
      $.character,
      $.string,
      $.quoted_string,
      $.boolean,
      $.unit
    ),

    number: $ => NUMBER,

    character: $ => seq(
      "'",
      choice(
        /[^\\']|\x00/,
        $.escape_sequence
      ),
      "'"
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^\\"%@]+|%|@/,
        $.escape_sequence,
        alias(/\\u\{[0-9A-Fa-f]+\}/, $.escape_sequence),
        alias(/\\\n[\t ]*/, $.escape_sequence),
        $.conversion_specification,
        $.pretty_printing_indication
      )),
      '"'
    ),

    boolean: $ => choice('true', 'false'),

    unit: $ => choice(
      seq('(', ')'),
      seq('begin', 'end')
    ),

    // Operators

    _sign_operator: $ => choice('+', '-', '+.', '-.'),

    infix_operator: $ => choice(
      $._hash_operator,
      $._pow_operator,
      $._mult_operator,
      $._add_operator,
      $._concat_operator,
      $._rel_operator,
      $._and_operator,
      $._or_operator,
      $._assign_operator
    ),

    _hash_operator: $ => /#[#!$%&*+\-./:<=>?@^|~]+/,

    _pow_operator: $ => choice(
      token(seq('**', repeat(OP_CHAR))),
      'lsl', 'lsr', 'asr'
    ),

    _mult_operator: $ => choice(
      token(seq(/[*/%]/, repeat(OP_CHAR))),
      'mod', 'land', 'lor', 'lxor'
    ),

    _add_operator: $ => token(choice(
      seq('+', repeat(OP_CHAR)),
      seq('-', choice(optional(/[!$%&*+\-./:<=?@^|~]/), repeat2(OP_CHAR))),
    )),

    _concat_operator: $ => token(
      seq(/[@^]/, repeat(OP_CHAR))
    ),

    _rel_operator: $ => token(choice(
      seq(/[=>$]/, repeat(OP_CHAR)),
      seq('<', choice(optional(/[!$%&*+./:<=>?@^|~]/), repeat2(OP_CHAR))),
      seq('&', choice(/[!$%*+\-./:<=>?@^|~]/, repeat2(OP_CHAR))),
      seq('|', choice(/[!$%&*+\-./:<=>?@^~]/, repeat2(OP_CHAR))),
      '!='
    )),

    _and_operator: $ => choice('&', '&&'),

    _or_operator: $ => choice('or', '||'),

    _assign_operator: $ => choice(':='),

    let_operator: $ => token(
      seq('let', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    _label_name: $ => alias($._identifier, $.label_name),
